Remove redundant cast in InMemoryTable.